force-app/main/default/objects/Account/fields/Agencia_Bancaria__c.field-meta.xml
<CustomField>
    <fullName>Agencia_Bancaria__c</fullName>
    <label>Agencia Bancaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>