force-app/main/default/objects/Account/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <label>CNPJ</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>