force-app/main/default/objects/Account/fields/NumeroConta__c.field-meta.xml
<CustomField>
    <fullName>NumeroConta__c</fullName>
    <label>Numero da conta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>